src/tests/return_statement/snapshots/monkey_interpreter__tests__return_statement__test_return_statement_case_1_evaluation.snap
---
source: src/tests/return_statement/mod.rs
expression: evaluation
---
Integer {
    value: 10,
}
