src/tests/return_statement/snapshots/monkey_interpreter__tests__return_statement__test_return_statement_case_1_syntax_analysis.snap
---
source: src/tests/return_statement/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Return {
            expression: Integer {
                literal: 10,
            },
        },
    },
]
