src/tests/return_statement/snapshots/monkey_interpreter__tests__return_statement__test_return_statement_case_3_lexical_analysis.snap
---
source: src/tests/return_statement/mod.rs
assertion_line: 15
expression: tokens
---
[
    PositionedToken {
        token: Return,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: String {
            literal: "string123",
        },
        position: Position {
            line: 1,
            column: 8,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 19,
        },
    },
]
